# opengl-workout

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: Camera.cpp  Camera.h  CommonValues.h  DirectionalLight.cpp  DirectionalLight.h  GLWindow.cpp  GLWindow.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  PointLight.cpp  PointLight.h  Shader.cpp  Shader.h  SpotLight.cpp  SpotLight.h  Texture.cpp  Texture.h  fragment.glsl  fshader.glsl  main.cpp  vertex.glsl  vshader.glsl
